--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
 .App {
+  margin:0;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  width: 96%;
+  padding: 2% 2%;
   min-height: 100vh;
+  background: linear-gradient(45deg, #5095E4, #306FD3);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  
+  -webkit-font-smoothing: none;
+  font-family: 'Poppins', sans-serif;
 }
