--- a/src/components/post.styles.css
+++ b/src/components/post.styles.css
@@ -32,6 +32,7 @@
   border-radius: 50%;
   padding: .4rem;
   transition: .2s ease-out;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .like.active {
